--- a/src/2-Skills/skills.css
+++ b/src/2-Skills/skills.css
@@ -772,4 +772,11 @@
     .education-separator {
         margin: 4.5rem 0 3.5rem;
     }
+    #skillsMobileSecond {
+        opacity: 0;
+        animation: visibleSecondSkillMobile .25s ease 3.75s forwards;
+    }
+    @keyframes visibleSecondSkillMobile {
+        100% {opacity: 1}
+    }
 }
