--- a/src/1-About/about.css
+++ b/src/1-About/about.css
@@ -69,7 +69,7 @@
     100% {opacity: 1}
 }
 .about-left-title:after {
-    content: '<h1/>';
+    content: '</h1>';
     position: absolute;
     font-family: cursive;
     color: #515152;
@@ -105,7 +105,7 @@
     opacity: 0;
 }
 .about-left-description:after {
-    content: '<p/>';
+    content: '</p>';
     font-size: 14px;
     font-family: cursive;
     color: #515152;
@@ -236,7 +236,7 @@
     font-weight: 500;
 }
 .about-right-title:after {
-    content: '<h2/>';
+    content: '</h2>';
     position: absolute;
     font-family: cursive;
     color: #515152;
@@ -268,7 +268,7 @@
     cursor: pointer;
 }
 .about-right-description:after {
-    content: '<p/>';
+    content: '</p>';
     position: absolute;
     font-family:cursive;
     color: #515152;
