skills font update

--- a/src/2-Skills/skills.css
+++ b/src/2-Skills/skills.css
@@ -779,6 +779,9 @@
     @keyframes visibleSecondSkillMobile {
         100% {opacity: 1}
     }
+    .note-wrapper p {
+        font-size: 1.5rem;
+    }
 }
 @media (max-width: 360px) {
     .education-header {
