--- a/src/5-Blogs/blogs.css
+++ b/src/5-Blogs/blogs.css
@@ -33,6 +33,9 @@
 @keyframes blogDesc {
     100% {opacity: 1}
 }
+@-webkit-keyframes blogDesc {
+    100% {opacity: 1}
+}
 .blog-wrapper {
     margin-top: 2.5rem;
     width: 90%;
@@ -47,6 +50,9 @@
     animation: blogWrapUp 1s ease .75s forwards;
 }
 @keyframes blogWrapUp {
+    100% {opacity: 1; margin-top: 5rem}
+}
+@-webkit-keyframes blogWrapUp {
     100% {opacity: 1; margin-top: 5rem}
 }
 .blog-wrapper input[type=radio] {
