--- a/src/6-Contact/contact.css
+++ b/src/6-Contact/contact.css
@@ -31,6 +31,15 @@
     75% {transform: scale3d(1.05, .95, 1)}
     to {transform: scale3d(1, 1, 1)}
 }
+@-webkit-keyframes contactBounce {
+    from {-webkit-transform: scale3d(1, 1, 1)}
+    30% {-webkit-transform: scale3d(1.25, 0.75, 1)}
+    40% {-webkit-transform: scale3d(0.75, 1.2, 1)}
+    50% {-webkit-transform: scale3d(1.15, 0.85, 1)}
+    65% {-webkit-transform: scale3d(.95, 1.05, 1)}
+    75% {-webkit-transform: scale3d(1.05, .95, 1)}
+    to {-webkit-transform: scale3d(1, 1, 1)}
+}
 
 #cLetter_c1 {opacity: 0; animation: aboutFadeIn 1s ease-in-out forwards; animation-delay: .1s}
 #cLetter_o {opacity: 0; animation: aboutFadeIn 1s ease-in-out forwards; animation-delay: .2s}
@@ -218,6 +227,11 @@
     75% {opacity: 1}
     100% {opacity: 0; bottom: -3rem}
 }
+@-webkit-keyframes copyPopup {
+    25% {opacity: 1}
+    75% {opacity: 1}
+    100% {opacity: 0; bottom: -3rem}
+}
 .contact-right-box {
     position: fixed;
     right: 0;
@@ -226,6 +240,9 @@
     width: 43.5%;
 }
 @keyframes mapCoverBye {
+    100% {width: 0}
+}
+@-webkit-keyframes mapCoverBye {
     100% {width: 0}
 }
 .contact-right-cover {
@@ -237,6 +254,9 @@
     animation: mapCoverBye .85s ease 1s forwards;
 }
 @keyframes mapBoxPop {
+    100% {margin-top: 0; opacity: 1}
+}
+@-webkit-keyframes mapBoxPop {
     100% {margin-top: 0; opacity: 1}
 }
 .map-popup {
@@ -308,6 +328,20 @@
     100% {opacity: 1; transform: none}
 }
 @keyframes contactFadeIn {
+    100% {opacity: 1}
+}
+@-webkit-keyframes contactIsLoadedAnim {
+    100% {opacity: 1; -webkit-transform: none}
+}
+@-webkit-keyframes contactSldLeft {
+    50% {opacity: 0}
+    100% {opacity: 1; left: 0}
+}
+@-webkit-keyframes contactSldRight {
+    50% {opacity: 0}
+    100% {opacity: 1; -webkit-transform: none}
+}
+@-webkit-keyframes contactFadeIn {
     100% {opacity: 1}
 }
 
@@ -605,6 +639,11 @@
         left: -1rem;
     }
     @keyframes copyPopup {
+        50% {opacity: 1}
+        75% {opacity: 1}
+        100% {opacity: 0; bottom: -2.5rem;}
+    }
+    @-webkit-keyframes copyPopup {
         50% {opacity: 1}
         75% {opacity: 1}
         100% {opacity: 0; bottom: -2.5rem;}
