--- a/src/3-Work/work.css
+++ b/src/3-Work/work.css
@@ -17,6 +17,9 @@
 @keyframes portFade {
     100% {opacity: 1}
 }
+@-webkit-keyframes portFade {
+    100% {opacity: 1}
+}
 .port-header {
     position: relative;
     color: white;
@@ -44,6 +47,9 @@
 @keyframes portDescScale {
     100% {transform: scale(1)}
 }
+@-webkit-keyframes portDescScale {
+    100% {-webkit-transform: scale(1)}
+}
 .port-description span {
     display: inline-block;
     opacity: 0;
@@ -64,6 +70,9 @@
 .port-description span:nth-child(12) {animation: descFadeIn 0.8s 2.7s forwards cubic-bezier(0.11, 0, 0.5, 0)}
 .port-description span:nth-child(13) {animation: descFadeIn 0.8s 2.8s forwards cubic-bezier(0.11, 0, 0.5, 0)}
 @keyframes descFadeIn {
+    100% {opacity: 1; filter: blur(0)}
+}
+@-webkit-keyframes descFadeIn {
     100% {opacity: 1; filter: blur(0)}
 }
 
@@ -152,6 +161,20 @@
     100% {width: 48.5rem; opacity: 1}
 }
 @keyframes portAnimPop {
+    100% {opacity: 1}
+}
+@-webkit-keyframes portAnimItem {
+    60% {-webkit-transform: scale(.9)}
+    100% {width: 100%; -webkit-transform: scale(1)}
+}
+@-webkit-keyframes portAnimBox {
+    100% {width: 48.5rem}
+}
+@-webkit-keyframes portAnimWrap {
+    80% {opacity: 0}
+    100% {width: 48.5rem; opacity: 1}
+}
+@-webkit-keyframes portAnimPop {
     100% {opacity: 1}
 }
 .portGifPopup {
@@ -244,6 +267,7 @@
 .port-btn-more:hover > #port-more-arrow {
     left: 50%;
     transform: translate(-50%, -50%) scale(1.25);
+    -webkit-transform: translate(-50%, -50%) scale(1.25);
 }
 #port-more-text {
     position: absolute;
@@ -260,6 +284,7 @@
     top: 50%;
     left: 82.5%;
     transform: translate(-82.5%, -50%);
+    -webkit-transform: translate(-82.5%, -50%);
     transition: all .2s ease;
 }
 
@@ -406,6 +431,13 @@
         80% {opacity: 0}
         100% {width: 35rem; opacity: 1}
     }
+    @-webkit-keyframes portAnimBox {
+        100% {width: 35rem}
+    }
+    @-webkit-keyframes portAnimWrap {
+        80% {opacity: 0}
+        100% {width: 35rem; opacity: 1}
+    }
     .portGifPopup {
         display: none;
     }
@@ -493,6 +525,10 @@
     @keyframes portAnimItem {
         60% {transform: scale(.9)}
         100% {width: 35rem; transform: scale(1)}
+    }
+    @-webkit-keyframes portAnimItem {
+        60% {-webkit-transform: scale(.9)}
+        100% {width: 35rem; -webkit-transform: scale(1)}
     }
     .port-title {
         font-size: 3rem;
