--- a/src/Navbar/navbar.css
+++ b/src/Navbar/navbar.css
@@ -186,6 +186,9 @@
     @keyframes navFadeBack {
         100% {opacity: 1}
     }
+    @-webkit-keyframes navFadeBack {
+        100% {opacity: 1}
+    }
     .navbar-top img {
         height: 11rem;
         width: 11rem;
