--- a/src/2-Skills/skills.css
+++ b/src/2-Skills/skills.css
@@ -247,7 +247,8 @@
     position: absolute;
     font-size: 2.5rem;
     color: white;
-    width: fit-content;
+    width: 100%;
+    text-align: center;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
